Time: 5 ms (95.91%), Space: 41.8 MB (65.40%) - LeetHub